--- a/backend/index.yaml
+++ b/backend/index.yaml
@@ -15,3 +15,9 @@ indexes:
   properties:
   - name: date
     direction: desc
+
+- kind: UserImage
+  ancestor: yes
+  properties:
+  - name: id
+    direction: desc
